--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Visper</title>
-    <meta charset="utf-8" />
+<title>Visper</title>
+<meta charset="utf-8" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<style>
+html, body, #app {
+    height: 100%
+}
+
+
+</style>
 </head>
 <body>
     <div id="app"></div>
