--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,8 @@
 <script src="/socket.io/socket.io.js"></script>
 <style>
 html, body, #app {
-    height: 100%
+    height: 100%;
+    font-size: 10px;
 }
 
 
